--- a/cafeversity/src/app/page.module.css
+++ b/cafeversity/src/app/page.module.css
@@ -233,7 +233,8 @@
   }
 } */
 
-* {
+
+/* * {
   margin: 0;
   padding: 0;
 }
@@ -241,4 +242,48 @@
 body {
   background-color: black;
   color: aliceblue;
+} */
+
+
+
+.buttons {
+  display: flex;
 }
+
+#food_today,
+#food_news,
+#main_view {
+  width: 50%;
+  height: 70px;
+  background-color: rgb(0, 204, 255);
+  text-align: center;
+  align-items: center;
+  border: 3px solid black;
+  text-decoration: none;
+  color: antiquewhite;
+  font-size: 28px;
+  font-weight: 700;
+  padding-top: 30px;
+  transition: background-color 0.5s ease, color 0.5s ease;
+  -webkit-transition: background-color 0.5s ease, color 0.5s ease;
+  -o-transition: background-color 0.5s ease, color 0.5s ease;
+  -moz-transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+#food_today:hover,
+#food_news:hover,
+#main_view:hover {
+  background-color: antiquewhite;
+  color: rgb(0, 204, 255);
+  transition: background-color 0.75s ease, color 0.75s ease;
+  -webkit-transition: background-color 0.75s ease, color 0.75s ease;
+  -o-transition: background-color 0.75s ease, color 0.75s ease;
+  -moz-transition: background-color 0.75s ease, color 0.75s ease;
+}
+
+/* .button_name {
+  color: antiquewhite;
+  font-size: 28px;
+  font-weight: 700;
+  border: 1px solid black;
+} */
