--- a/cafeversity/src/app/globals.css
+++ b/cafeversity/src/app/globals.css
@@ -106,12 +106,15 @@ a {
   }
 } */
 
-* {
+
+
+
+/* * {
   margin: 0;
   padding: 0;
-}
+} */
+
 
 body {
-  background-color: black;
-  color: aliceblue;
+  background-color: orange;
 }
