--- a/cafeversity/src/app/page.module.css
+++ b/cafeversity/src/app/page.module.css
@@ -268,6 +268,7 @@ body {
   -webkit-transition: background-color 0.5s ease, color 0.5s ease;
   -o-transition: background-color 0.5s ease, color 0.5s ease;
   -moz-transition: background-color 0.5s ease, color 0.5s ease;
+  -ms-transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 #food_today:hover,
@@ -275,10 +276,11 @@ body {
 #main_view:hover {
   background-color: antiquewhite;
   color: rgb(0, 204, 255);
-  transition: background-color 0.75s ease, color 0.75s ease;
-  -webkit-transition: background-color 0.75s ease, color 0.75s ease;
-  -o-transition: background-color 0.75s ease, color 0.75s ease;
-  -moz-transition: background-color 0.75s ease, color 0.75s ease;
+  transition: background-color 0.5s ease, color 0.5s ease;
+  -webkit-transition: background-color 0.5s ease, color 0.5s ease;
+  -o-transition: background-color 0.5s ease, color 0.5s ease;
+  -moz-transition: background-color 0.5s ease, color 0.5s ease;
+  -ms-transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* .button_name {
