Images' size is changable in dependency of a screen width. Weekdays are added into a Weather Block

--- a/cafeversity/src/app/commonMenu/commonMenu.module.css
+++ b/cafeversity/src/app/commonMenu/commonMenu.module.css
@@ -24,14 +24,13 @@
     display: flex;
     flex-direction: column;
     margin: 15px 10px 15px 10px;
-    position: relative;
 }
 
 #list_field_image {
-    position: relative;
-    width: 20vw;
+    width: 21vw;
     height: 250px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .text_lines {
