Adding styles for sub links for the news' page.

--- a/cafeversity/src/app/news/news.module.css
+++ b/cafeversity/src/app/news/news.module.css
@@ -1,13 +1,51 @@
 .sub_links_panel {
-    height: 75px;
-    width: 100vw;
+    height: 70px;
+    /* border: 1px solid black; */
 }
 
 .sub_links {
     height: 50px;
     width: 60vw;
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
     margin: auto;
+    margin-top: 10px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.sub_link {
+    height: 34px;
+    border-radius: 15px;
+    outline: 5px solid rgb(190, 189, 189);
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 6px;
+    font-size: 20px;
+    font-weight: 500;
+    text-decoration: none;
+    color: antiquewhite;
+    background-color: gray;  
+    text-align: center;
+    align-items: center;
+    transition: background-color 0.3s ease, outline 0.3s ease;
+    -webkit-transition: background-color 0.3s ease, outline 0.3s ease;
+    -o-transition: background-color 0.3s ease, outline 0.3s ease;
+    -moz-transition: background-color 0.3s ease, outline 0.3s ease;
+    -ms-transition: background-color 0.3s ease, outline 0.3s ease;
+}
+
+.sub_link:hover {
+    background-color: rgb(190, 189, 189);
+    outline: 5px solid gray;
+    transition: background-color 0.3s ease, outline 0.3s ease;
+    -webkit-transition: background-color 0.3s ease, outline 0.3s ease;
+    -o-transition: background-color 0.3s ease, outline 0.3s ease;
+    -moz-transition: background-color 0.3s ease, outline 0.3s ease;
+    -ms-transition: background-color 0.3s ease, outline 0.3s ease;
+}
+
+#main_part {
+    min-height: calc(100vh - 305px);
+    border: 1px solid black;
 }
