Small cleaning and comments adding for "main" branch.

--- a/cafeversity/src/app/news/news.module.css
+++ b/cafeversity/src/app/news/news.module.css
@@ -1,3 +1,4 @@
+/* Navbar with Sub Links */
 .sub_links_panel {
     height: 70px;
     /* border: 1px solid black; */
@@ -63,6 +64,8 @@
     opacity: 0.3;
 }
 
+
+/* Main Part of Sub Links' Pages */
 #main_part {
     min-height: calc(100vh - 305px);
     border: 1px solid black;
