--- a/cafeversity/src/app/news/news.module.css
+++ b/cafeversity/src/app/news/news.module.css
@@ -91,11 +91,61 @@
     padding-top: 5px;
 }
 
+
+.food_zone {
+    border: 1px solid black;
+    padding-top: 5px;
+    margin-bottom: 10px;
+}
+
+.food_lines {
+    display: flex;
+    width: 445px;
+    /* border: 1px solid black; */
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.food_pos {
+    margin-left: 10px;
+    margin-right: 5px;
+    /* border: 1px solid black; */
+    width: 25px;
+    align-content: center;/* vertical aligning */
+    text-align: center;/* horizontal aligning */
+}
+
+.food_name,
+.portions,
+.food_price {
+    margin-left: 5px;
+    margin-right: 5px;
+    /* border: 1px solid black; */
+    width: 85px;
+    align-content: center;
+    text-align: center;
+}
+
+.portions {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: space-around;
+}
+
+.food_canceling {
+    margin-left: 5px;
+    margin-right: 10px;
+    /* border: 1px solid black; */
+    width: 85px;
+    align-content: center;
+    text-align: center;
+}
+
 .message_summa {
     display: flex;
     justify-content: space-around;
     height: 50px;
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
 }
 
 .importance {
