--- a/cafeversity/src/app/news/foodpeople/foodpeople.module.css
+++ b/cafeversity/src/app/news/foodpeople/foodpeople.module.css
@@ -66,6 +66,7 @@
     border-radius: 30px;
     margin: 30px auto;
     display: flex;
+    /* outline: 1px solid black; */
     /* background-color: black; */
 }
 
