--- a/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
+++ b/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
@@ -2,3 +2,39 @@
     min-height: calc(100vh - 305px);
     border: 1px solid black;
 }
+
+#article_body {
+    min-height: 300px;
+    border: 3px solid black;
+    border-radius: 30px;
+}
+
+#article_enter_image {
+    height: 500px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    /* border: 2px solid purple; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(110, 110, 0);
+    position: relative;
+}
+
+#article_enter_name {
+    position: absolute;
+    color: antiquewhite;
+    bottom: 30px;
+    right: 23vw;
+}
+
+#article_enter_head {
+    font-style: italic;
+    text-align: right;
+}
+
+#article_enter_shorty {
+    font-weight: bolder;
+    text-align: center;
+}
