--- a/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
+++ b/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
@@ -5,8 +5,10 @@
 
 #article_body {
     min-height: 300px;
-    border: 3px solid black;
+    /* border: 3px solid black; */
     border-radius: 30px;
+    background-color: rgb(110, 110, 0);
+    padding-bottom: 30px;
 }
 
 #article_enter_image {
@@ -18,7 +20,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(110, 110, 0);
+    /* background-color: rgb(110, 110, 0); */
     position: relative;
 }
 
@@ -37,4 +39,80 @@
 #article_enter_shorty {
     font-weight: bolder;
     text-align: center;
+}
+
+#first_text {
+    text-align: justify;
+    padding: 5px 50px;
+    margin-top: 15px;
+    background-color: antiquewhite;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+#first_text p {
+    font-size: 28px;
+}
+
+
+#personal_data_block {
+    width: 80vw;
+    min-height: 100px;
+    border: 5px dotted black;
+    margin: 0 auto;
+    background-color: antiquewhite;
+    margin-top: 20px;
+    padding: 20px 30px;
+}
+
+#personal_data_block p {
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 30px;
+    font-style: italic;
+}
+
+.personal_data {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.photo_data {
+    border-radius: 40px;
+}
+
+.table_data {
+    border: 2px dashed purple;
+    max-height: 400px;
+}
+
+
+.article_part {
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+.article_image {
+    height: 300px;
+    border: 3px solid purple;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.article_text {
+    border: 2px ridge orange;
+    text-align: justify;
+    padding: 5px 50px;
+    margin-top: 10px;
+    background-color: antiquewhite;
+    font-size: 22px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
