--- a/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
+++ b/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
@@ -42,10 +42,14 @@
 }
 
 #first_text {
+    width: 90vw;
+    margin: 0 auto;
     text-align: justify;
-    padding: 5px 50px;
-    margin-top: 15px;
-    background-color: antiquewhite;
+    /* padding: 0 50px; */
+    /* margin-top: 10px; */
+    margin-bottom: 100px;
+    /* background-color: antiquewhite; */
+    color: antiquewhite;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 10px;
@@ -60,9 +64,9 @@
 #personal_data_block {
     width: 80vw;
     min-height: 100px;
-    border: 5px dotted black;
+    /* border: 5px dotted black; */
     margin: 0 auto;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     margin-top: 20px;
     padding: 20px 30px;
 }
@@ -70,10 +74,11 @@
 #personal_data_block p {
     text-align: center;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-weight: bold;
     font-size: 30px;
     font-style: italic;
+    color: antiquewhite;
 }
 
 .personal_data {
@@ -87,8 +92,24 @@
 }
 
 .table_data {
-    border: 2px dashed purple;
-    max-height: 400px;
+    border-right: 6px solid gray;
+    border-bottom: 5px solid gray;
+    max-height: 600px;
+    margin-left: 5vw;
+    font-size: 30px;
+    text-align: justify;
+    flex-grow: 2;
+    background-color: rgb(187, 187, 187);
+    border-radius: 75px 30px;
+}
+.table_data > li:first-child {
+    margin: 40px 60px 60px 60px;
+}
+.table_data > li {
+    margin: 60px;
+}
+.table_data > li:last-child {
+    margin: 60px 60px 40px 60px;
 }
 
 
