--- a/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
+++ b/cafeversity/src/app/news/foodpeople/[foodpeople]/article.module.css
@@ -49,6 +49,7 @@
     text-align: justify;
     /* padding: 0 50px; */
     /* margin-top: 10px; */
+    margin-top: 30px;
     margin-bottom: 100px;
     /* background-color: antiquewhite; */
     color: antiquewhite;
@@ -124,10 +125,16 @@
 
 .article_image {
     height: 300px;
-    border: 3px solid purple;
+    /* border: 3px solid purple; */
     border-radius: 20px;
     display: flex;
     justify-content: center;
+}
+
+.image_container {
+    height: 300px;
+    width: 550px;
+    position: relative;
 }
 
 .article_text {
