--- a/cafeversity/src/pages/login/LoginPage.module.css
+++ b/cafeversity/src/pages/login/LoginPage.module.css
@@ -30,19 +30,22 @@
 }
 
 #loginForm label {
-    font-size: 25px;
+    font-size: 22px;
     font-style: italic;
     padding-left: 5px;
 }
 
 #firstname,
 #lastname,
-#password {
+#nickname,
+#eMail,
+#password,
+#password_again {
     width: 100%;
     box-sizing: border-box;
     margin-top: 5px;
     margin-bottom: 25px;
-    font-size: 25px;
+    font-size: 22px;
     border: 2px solid gray;
     border-radius: 10px;
     padding-left: 10px;
@@ -52,7 +55,10 @@
 }
 #firstname::placeholder,
 #lastname::placeholder,
-#password::placeholder {
+#nickname::placeholder,
+#eMail::placeholder,
+#password::placeholder,
+#password_again::placeholder {
     opacity: 0.3;
 }
 
@@ -69,7 +75,7 @@
 #submitButton,
 #closeButton {
     height: 35px;
-    width: 105px;
+    min-width: 105px;
     font-size: 20px;
     border-radius: 10px;
 }
