This commit consists of files for password recovery process (using Nodemailer). Registered User puts his/her email in special Password Recovery form, the system creates a reset token and sends it on user's email address. When a user clicks on link in reset token mail, he/she is sent on Password Update page. All steps have been checked and work successfully. But I need to set up all behaviors by getting response answers

--- a/cafeversity/src/pages/login/LoginPage.module.css
+++ b/cafeversity/src/pages/login/LoginPage.module.css
@@ -10,8 +10,8 @@
 
 /* LogIn.tsx */
 #loginForm {
-    min-height: 65vh;
-    max-height: 78vh;
+    min-height: 21vh;/*65vh*/
+    max-height: 82vh;
     min-width: 30vw;
     max-width: 30vw;
     border: 1px solid grey;
@@ -167,4 +167,10 @@
 
 .help_block p {
     font-size: 19px;
+}
+
+.error_block p {
+    font-size: 19px;
+    text-align: justify;
+    text-indent: 1.5em;
 }
