--- a/cafeversity/src/app/[authorizedUser]/authorized.module.css
+++ b/cafeversity/src/app/[authorizedUser]/authorized.module.css
@@ -4,19 +4,21 @@
 }
 
 .userImage {
-    height: 70px;
-    width: 70px;
+    height: 210px;
+    width: 210px;
     border-radius: 50%;
-    margin-left: 10px;
+    margin-left: 50px;
     margin-right: 10px;
     background-color: aqua;
     padding: 3px;
 }
 
 .userName {
-    margin-left: 10px;
+    margin-left: 50px;
     margin-right: 10px;
     padding: 5px 10px;
+    font-size: 48px;
+    padding: 25px 100px 25px 25px;
 }
 
 /* .exit_cover {
