--- a/cafeversity/src/app/[authorizedUser]/authorized.module.css
+++ b/cafeversity/src/app/[authorizedUser]/authorized.module.css
@@ -4,13 +4,24 @@
 }
 
 .userImage {
-    height: 210px;
-    width: 210px;
+    position: relative;
     border-radius: 50%;
-    margin-left: 50px;
-    margin-right: 10px;
-    background-color: aqua;
-    padding: 3px;
+    overflow: hidden;
+    min-width: 7vw;
+    width: 14vw;
+    aspect-ratio: 1 / 1;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    box-shadow: black 0 0 5px 2px;
+}
+.userImage img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    object-position: center;
 }
 
 .userName {
