--- a/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
+++ b/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
@@ -53,7 +53,13 @@
     top: 50%;
     left: 0.3125rem;
     display: flex;
+
     transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+
     pointer-events: none;
     border: none;
     border-radius: 5px;
@@ -65,4 +71,102 @@
     top: 0;
     transform: translateY(-50%) scale(0.75);
     font-family: Consolas, monospace;
+}
+
+
+.commonSetsBtns {
+    display: flex;
+    /* outline: 2px dotted orange; */
+    justify-content: flex-end;
+    gap: 2%;
+    padding-right: 5%;
+    padding-top: 50px;
+}
+
+.cancelBtn,
+.saveBtn {
+    height: 50px;
+    min-width: fit-content;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
+    font-weight: 700;
+
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-shadow: none;
+    transition: box-shadow 0.5s ease-in-out;
+    -webkit-transition: box-shadow 0.5s ease-in-out;
+    -moz-transition: box-shadow 0.5s ease-in-out;
+    -o-transition: box-shadow 0.5s ease-in-out;
+    -ms-transition: box-shadow 0.5s ease-in-out;
+}
+.cancelBtn {
+    color: white;
+    background-color: orangered;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+.saveBtn {
+    color: white;
+    background-color: blue;
+    padding-left: 120px;
+    padding-right: 120px;
+}
+.cancelBtn:hover,
+.saveBtn:hover {
+    box-shadow: gray 0 0 5px 7px;
+    transition: box-shadow 0.5s ease-in-out;
+    -webkit-transition: box-shadow 0.5s ease-in-out;
+    -moz-transition: box-shadow 0.5s ease-in-out;
+    -o-transition: box-shadow 0.5s ease-in-out;
+    -ms-transition: box-shadow 0.5s ease-in-out;
+}
+.btn_name {
+    position: absolute;
+}
+
+
+#dialog {
+    background-color: rgba(255, 255, 255, 0.8);
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+}
+.accessView,
+.denyView {
+    border-radius: 2vh;
+    width: 25%;
+    height: 25vh;
+    margin: auto;
+    background-color: rgb(231, 231, 231);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#dialog_question {
+    text-align: center;
+    font-size: 25px;
+    font-weight: 600;
+    padding: 0 6%;
+    margin: 0;
+    margin-bottom: 3vh;
+    text-shadow: revert;
+    text-decoration-style: solid;
+}
+#dialog_buttons {
+    /* border: 2px solid black; */
+    margin-top: 3vh;
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
 }
