--- a/cafeversity/src/components/ImageEditor/imgEditor.module.css
+++ b/cafeversity/src/components/ImageEditor/imgEditor.module.css
@@ -27,6 +27,8 @@
     position: relative;
     border-radius: 50%;
     overflow: hidden;
+    min-width: 30%;
+    height: 30%;
     width: 60%;
     aspect-ratio: 1 / 1;
     margin-bottom: 10px;
@@ -40,6 +42,7 @@
     width: 100%;
     height: 100%;
     object-fit: fill;
+    object-position: center;
 }
 
 .photo_edit_buttons {
@@ -54,18 +57,35 @@
 .deleteBtn {
     height: 50px;
     min-width: fit-content;
-    border-radius: 20px;
+    border-radius: 5px;
     border: none;
     color: white;
     padding-left: 10px;
     padding-right: 10px;
     font-weight: 700;
+    /* box-shadow: lightgray 0 0 5px 7px; */
+    box-shadow: none;
+    transition: box-shadow 0.7s ease-in-out;
+    -webkit-transition: box-shadow 0.7s ease-in-out;
+    -moz-transition: box-shadow 0.7s ease-in-out;
+    -ms-transition: box-shadow 0.7s ease-in-out;
+    -o-transition: box-shadow 0.7s ease-in-out;
+}
+
+.changeBtn:hover,
+.deleteBtn:hover {
     box-shadow: lightgray 0 0 5px 7px;
+    transition: box-shadow 0.5s ease-in-out;
+    -webkit-transition: box-shadow 0.5s ease-in-out;
+    -moz-transition: box-shadow 0.5s ease-in-out;
+    -ms-transition: box-shadow 0.5s ease-in-out;
+    -o-transition: box-shadow 0.5s ease-in-out;
 }
 
 .changeBtn:active,
 .deleteBtn:active {
     outline: 5px solid orange;
+    box-shadow: lightgray 0 0 5px 7px;
 }
 
 .changeBtn {
