After merging develop branch changes into the main branch, I decided on next steps: 1) I removed the first type of Clock component because of its difficult implementation in the Next.JS project. 2) For the first time, it is unnecessary to use an option User's name-surname block with calling by API fetch. It is slower than data from a http query. 3) BottomMenu component has been already fixed from rattling when a user puts the screen pointer between BottomMenu and the screen bottom border. 4) I prepared places in SettingsPage component to add new features. Also I've rewritten SettingsPage bar menu having made it sticky. Anchors help during SettingsPage navigation.

--- a/cafeversity/src/components/ImageEditor/imgEditor.module.css
+++ b/cafeversity/src/components/ImageEditor/imgEditor.module.css
@@ -1,7 +1,8 @@
 .photo_editor {
     max-width: 30%;
-    /* border: 2px solid black; */
+    outline: 2px solid black;
     margin-bottom: 20px;
+    scroll-margin-top: 180px;
 }
 
 .photo_edit_name {
