--- a/cafeversity/src/app/[authorizedUser]/authorized.module.css
+++ b/cafeversity/src/app/[authorizedUser]/authorized.module.css
@@ -1,9 +1,5 @@
-.userImage,
-.userName {
-    border: 2px solid black;
-}
-
 .userImage {
+    /* border: 2px solid black; */
     position: relative;
     border-radius: 50%;
     overflow: hidden;
@@ -25,6 +21,7 @@
 }
 
 .userName {
+    /* border: 2px solid black; */
     margin-left: 50px;
     margin-right: 10px;
     padding: 5px 10px;
