There are very small corrections: ImageEditor border is hidden and scroll-bars will be hidden when the dialog view is being shown.

--- a/cafeversity/src/components/ImageEditor/imgEditor.module.css
+++ b/cafeversity/src/components/ImageEditor/imgEditor.module.css
@@ -1,6 +1,6 @@
 .photo_editor {
     max-width: 30%;
-    outline: 2px solid black;
+    /* outline: 2px solid black; */
     margin-bottom: 20px;
     scroll-margin-top: 180px;
 }
