Having seen on SettingPage code I decided to cut it on separate and independent parts like StickyNavBar, DialogView, AccessBtn and DenyBtn for leaving opportunities to use them for other pages. Many changes should be ahead, but there are my first steps on this way.

--- a/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
+++ b/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
@@ -130,7 +130,7 @@
 }
 
 
-#dialog {
+/* #dialog {
     background-color: rgba(255, 255, 255, 0.8);
     height: 100vh;
     width: 100%;
@@ -164,9 +164,9 @@
     text-decoration-style: solid;
 }
 #dialog_buttons {
-    /* border: 2px solid black; */
+    border: 2px solid black;
     margin-top: 3vh;
     display: flex;
     width: 80%;
     justify-content: space-between;
-}
+} */
