--- a/cafeversity/src/components/StickySettingsNavBar/StickyNavBar.module.css
+++ b/cafeversity/src/components/StickySettingsNavBar/StickyNavBar.module.css
@@ -5,10 +5,11 @@
     z-index: 9;
     background-color: rgb(252, 242, 223);
     scroll-margin-top: 30px;
+    box-shadow: grey 0 10px 7px -5px;
 }
 #sticky_navbar_name {
     font-family: Consolas, monospace;
-    font-size: 28px;
+    font-size: 32px;
     margin-top: 0;
     padding-top: 30px;
 }
@@ -20,5 +21,5 @@
     /* border: 3px solid black; */
     display: flex;
     font-family: Consolas, monospace;
-    font-size: 20px;
+    font-size: 24px;
 }
