Today I have been starting to write a part about Tastes and Body Constitution settings. I've done 3 settings for dishes' tastes. I don't know what will be next, but I'm thinking about it.

--- a/cafeversity/src/components/TastesSettings/Taste&BodyConst.module.css
+++ b/cafeversity/src/components/TastesSettings/Taste&BodyConst.module.css
@@ -1,11 +1,13 @@
-.appearanceBox {
-    /* height: 60vh; */
+.tastyNbodyBlock {
+    /* height: 70vh; */
+    border: 2px dashed black;
     border-radius: 1%/2%;
     padding: 1em;
+    background-color: white;
     scroll-margin-top: 205px;
 }
 
-#appearanceBoxName {
+#tastyNbodyBlockName {
     /* border: 1px solid black; */
     padding-left: 10px;
     padding-right: 10px;
