--- a/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
+++ b/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
@@ -81,7 +81,8 @@
     justify-content: flex-end;
     gap: 2%;
     padding-right: 5%;
-    padding-top: 50px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .cancelBtn,
