--- a/cafeversity/src/components/ImageEditor/imgEditor.module.css
+++ b/cafeversity/src/components/ImageEditor/imgEditor.module.css
@@ -1,8 +1,19 @@
+#commonSettingsName {
+    /* border: 1px solid black; */
+    padding-left: 1em;
+    padding-right: 1em;
+    width: max-content;
+    font-size: 2em;
+    text-decoration: underline;
+    margin-top: 1em;
+    font-weight: 700;
+}
+
 .photo_editor {
     max-width: 30%;
-    /* outline: 2px solid black; */
+    /* border: 2px solid black; */
     margin-bottom: 20px;
-    scroll-margin-top: 220px;
+    scroll-margin-top: 302px;
 }
 
 .photo_edit_name {
