--- a/cafeversity/src/components/TastesSettings/CaloriesRange/RangeOfCalories.module.css
+++ b/cafeversity/src/components/TastesSettings/CaloriesRange/RangeOfCalories.module.css
@@ -20,8 +20,7 @@
 .twohandRangeTrack {
     width: 100%;
     height: 0.3125em;
-    background-color: rgb(255, 238, 140);
-    outline: 0.0625em solid #d5d5d5;
+    background-color: rgb(72, 130, 255);
     position: absolute;
     margin: auto;
     top: 0;
@@ -39,6 +38,7 @@
     width: 2em;
     border-radius: 50%;
     background-color: gold;
+    border: 0.1875em solid grey;
     cursor: pointer;
     margin-top: -0.5em;
     pointer-events: all;
@@ -58,6 +58,7 @@
     width: 2em;
     border-radius: 50%;
     background-color: gold;
+    border: 0.1875em solid grey;
     cursor: pointer;
     margin-top: -0.5em;;
     pointer-events: all;
