Last month I was very busy. I solved practical tasks by C# and SQL Server programming courses. I passed exams successfully last week.
During that time I thought about saving customization settings. It was a stupid and rapid idea to add them into Users table in SQLite3 database. I found some other ways for it. First of all, I will try with the browser's local storage.

At this commit I've discarded all input data from Users table, have deleted customization rows in it.
I have started preparation for the first customization option: changing between light and dark themes using CSS-variables.

--- a/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
+++ b/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
@@ -41,6 +41,7 @@
     column-count: auto;
     line-height: 1.5;
     margin-bottom: 15px;
+    color: var(--text-color);
 }
 .textInput:focus {
     border: 3px #714efe solid;
