--- a/cafeversity/src/components/TastesSettings/MildSpicy/TasteCheckboxes.module.css
+++ b/cafeversity/src/components/TastesSettings/MildSpicy/TasteCheckboxes.module.css
@@ -100,4 +100,5 @@ I have repeated his code and have changed design for my checkboxes
     padding-top: 0;
     padding-right: 10px;
     padding-left: 10px;
+    color: var(--text-color);
 }
