Today I have added settings for accent (brand) colour. You can check it choosing between light and dark page theme. A colour of block's outline has changed.

--- a/cafeversity/src/app/globals.css
+++ b/cafeversity/src/app/globals.css
@@ -119,6 +119,7 @@ a {
   /* --background-color: rgb(73, 71, 66); */
   --text-color: black;
   /* --text-color: white; */
+  --accent-color: lime;
 }
 
 [data-theme='dark'] {
