--- a/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
+++ b/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
@@ -42,6 +42,8 @@
     line-height: 1.5;
     margin-bottom: 15px;
     color: var(--text-color);
+
+    font-family: var(--font-family);
 }
 .textInput:focus {
     border: 3px #714efe solid;
@@ -71,7 +73,7 @@
     transition: top 0.1s ease-in-out, scale 0.1s ease-in-out;
     top: 0;
     transform: translateY(-50%) scale(0.75);
-    font-family: Consolas, monospace;
+    font-family: var(--font-family);
     font-size: 20px;
 }
 
