--- a/cafeversity/src/components/ImageEditor/imgEditor.module.css
+++ b/cafeversity/src/components/ImageEditor/imgEditor.module.css
@@ -8,6 +8,8 @@
     margin-top: 1em;
     font-weight: 700;
     color: var(--text-color);
+
+    font-family: var(--font-family);
 }
 
 .photo_editor {
@@ -23,7 +25,7 @@
     font-size: 22px;
     font-style: oblique;
     font-weight: bolder;
-    font-family: Consolas, monospace;
+    font-family: var(--font-family);
     margin-bottom: 0.55em;
     text-align: justify;
     text-indent: 2em;
