--- a/cafeversity/src/components/OtherParts/SubTitle/SubTitle.module.css
+++ b/cafeversity/src/components/OtherParts/SubTitle/SubTitle.module.css
@@ -1,7 +1,7 @@
 .settingsSubTitle {
     font-size: 1.5em;
     font-weight: 700;
-    font-family: Consolas, monospace;
+    font-family: var(--font-family);
     padding-left: 10px;
     padding-right: 10px;
     color: var(--text-color);
