--- a/cafeversity/src/components/RadiosChoice/Radios.module.css
+++ b/cafeversity/src/components/RadiosChoice/Radios.module.css
@@ -11,6 +11,8 @@
     padding-left: 10px;
     padding-right: 10px;
     color: var(--text-color);
+
+    font-family: var(--font-family);
 }
 
 .radios {
