--- a/cafeversity/src/components/Dialog/DialogView.module.css
+++ b/cafeversity/src/components/Dialog/DialogView.module.css
@@ -2,7 +2,7 @@
     background-color: rgba(255, 255, 255, 0.8);
     height: 100vh;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
@@ -14,7 +14,8 @@
     width: 25%;
     height: 25vh;
     margin: auto;
-    background-color: rgb(231, 231, 231);
+    /* background-color: rgb(231, 231, 231); */
+    background-color: var(--background-color);
     display: flex;
     flex-direction: column;
     align-items: center;
